--- a/DocumentsExternal.csproj
+++ b/DocumentsExternal.csproj
@@ -12,6 +12,10 @@
     <PackageReference Include="Serilog.Sinks.Seq" Version="5.1.2-dev-00225" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Avalanche\Models\Models.csproj" />
+  </ItemGroup>
+
   <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
